--- a/Monus_Abel_Kevenc_Projekt_God_of_War/Oldalak/Atreus.html
+++ b/Monus_Abel_Kevenc_Projekt_God_of_War/Oldalak/Atreus.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atreus</title>
     <meta name="author" content="Mónus Ábel">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -46,7 +46,9 @@
         </div>
     </nav>
     <header class="container">
+        <hr class="vastagvonal">
         <h1 class="a-h2"> Atreus</h1>
+        <hr>
     </header>
     <main class="container">
         <hr class="vastagvonal">
